# prj002-dream-wars

./: README.md
apple/: SDL2-2.26.1.dmg  SDL2_image-2.6.2.dmg  SDL2_mixer-2.6.2.dmg  SDL2_ttf-2.20.1.dmg  libfreetype.6.dylib
apple/dream-wars-macos.xcodeproj/: project.pbxproj
apple/dream-wars-macos.xcodeproj/project.xcworkspace/xcuserdata/johannes.xcuserdatad/: UserInterfaceState.xcuserstate
apple/dream-wars-macos.xcodeproj/xcshareddata/xcschemes/: dream-wars-macos.xcscheme
apple/dream-wars-macos.xcodeproj/xcuserdata/johannes.xcuserdatad/xcschemes/: xcschememanagement.plist
win64/: CMakeLists.txt  ai.h  audio.cpp  audio.h  camera.cpp  camera.h  collision.cpp  common.h  component.h  coroutine.cpp  coroutine.h  entity.h
win64/Frameworks/SDL2.framework/Headers/: SDL.h  SDL_atomic.h  SDL_config_macosx.h  SDL_cpuinfo.h  SDL_endian.h  SDL_filesystem.h  SDL_keycode.h  SDL_main.h  SDL_metal.h  SDL_mouse.h  SDL_opengl.h  SDL_opengl_glext.h  SDL_platform.h  SDL_rect.h  SDL_render.h  SDL_rwops.h  SDL_scancode.h  SDL_sensor.h  SDL_stdinc.h  SDL_surface.h  SDL_system.h  SDL_video.h
win64/Frameworks/SDL2.framework/Resources/: Info.plist
win64/Frameworks/SDL2.framework/Versions/A/: SDL2
win64/Frameworks/SDL2.framework/Versions/A/Headers/: SDL_clipboard.h  SDL_config.h  SDL_events.h  SDL_gamecontroller.h  SDL_guid.h  SDL_hints.h  SDL_keyboard.h  SDL_thread.h  SDL_version.h
win64/Frameworks/SDL2.framework/Versions/A/_CodeSignature/: CodeResources
win64/Frameworks/SDL2.framework/Versions/Current/: SDL2
win64/Frameworks/SDL2.framework/Versions/Current/Headers/: SDL_assert.h  SDL_audio.h  SDL_joystick.h  SDL_log.h  SDL_pixels.h  SDL_surface.h  SDL_video.h
win64/Frameworks/SDL2_image.framework/Versions/Current/: SDL2_image
win64/Frameworks/SDL2_image.framework/Versions/Current/Headers/: SDL_image.h
win64/Frameworks/SDL2_mixer.framework/Versions/Current/: SDL2_mixer
win64/Frameworks/SDL2_ttf.framework/: SDL2_ttf
win64/Frameworks/SDL2_ttf.framework/Versions/Current/Headers/: SDL_ttf.h
win64/cmake/: FindSDL2_mixer.cmake
win64/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
win64/imgui/backends/: imgui_impl_sdl.cpp
win64/include/: glad.c
win64/include/SDL2/: SDL_config.h.cmake  SDL_egl.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_keycode.h  SDL_opengl_glext.h  SDL_opengles2_gl2ext.h  SDL_pixels.h  SDL_render.h  SDL_scancode.h  SDL_stdinc.h  SDL_surface.h  SDL_system.h  SDL_video.h
win64/include/assimp/: Importer.hpp
win64/include/assimp/Compiler/: pstdint.h
win64/include/freetype/freetype/: freetype.h  ftcolor.h  ftdriver.h  ftimage.h  t1tables.h  ttnameid.h
win64/include/freetype/freetype/config/: ftoption.h
win64/include/glad/: glad.h
win64/include/glm/detail/: func_common.inl
win64/include/glm/ext/: matrix_clip_space.hpp
win64/include/glm/gtc/: packing.hpp  type_precision.hpp
win64/include/glm/gtx/: euler_angles.hpp  vec_swizzle.hpp
win64/include/imgui/: imgui.h  imgui_internal.h  imstb_truetype.h
win64/include/imgui/backends/: imgui_impl_opengl3_loader.h
win64/include/minicoro/: minicoro.h
win64/include/stb/: stb_image.h
win64/res/models/: turret.fbx  turret2.fbx  turret3.fbx
